@@ -26,73 +26,77 @@
 	</tr>
 	<tr>
 		<td style="width: 195px; vertical-align: top;">{MENU}</td>
-		<td colspan="2" style="vertical-align: top;">
+	    <td colspan="2" style="vertical-align: top;">
 			<table style="width: 100%; padding:0;margin:0;" cellspacing="0">
-				<tr style="height: 95px;">
+				<tr style="height:95px;">
 					<td style="padding-left:30px; width: 100%; background-image: url({THEME_COLOR_PATH}/images/top/middle_bg.jpg);">{MAIN_MENU}</td>
 					<td style="padding:0;margin:0;text-align: right; width: 73px;vertical-align: top;"><img src="{THEME_COLOR_PATH}/images/top/middle_right.jpg" width="73" height="95" border="0" alt="" /></td>
 				</tr>
 				<tr>
 					<td colspan="3">
-						<form enctype="multipart/form-data" name="set_layout" method="post" action="settings_layout.php">
-							<table width="100%" border="0" cellspacing="0" cellpadding="0">
-								<tr>
-									<td align="left">
-										<table width="100%" cellpadding="5" cellspacing="5">
-											<tr>
-												<td width="25"><img src="{THEME_COLOR_PATH}/images/content/table_icon_layout.png" width="25" height="25" alt="" /></td>
-												<td colspan="2" class="title">{TR_LAYOUT_SETTINGS}</td>
-											</tr>
-										</table>
-									</td>
-									<td width="27" align="right">&nbsp;</td>
-								</tr>
-								<tr>
-									<td valign="top">
-										<table width="100%" cellspacing="3">
+						<table width="100%" border="0" cellspacing="0" cellpadding="0">
+							<tr>
+								<td align="left">
+									<table width="100%" cellpadding="5" cellspacing="5">
+										<tr>
+											<td width="25"><img src="{THEME_COLOR_PATH}/images/content/table_icon_layout.png" width="25" height="25" alt="" /></td>
+											<td colspan="2" class="title">{TR_LAYOUT_SETTINGS}</td>
+										</tr>
+									</table>
+								</td>
+								<td width="27" align="right">&nbsp;</td>
+							</tr>
+							<tr>
+								<td>
+									<table width="100%" cellpadding="0" cellspacing="0">
+										<tr>
+											<td width="40">&nbsp;</td>
+											<td align="left">
 											<!-- BDP: page_message -->
-											<tr>
-												<td width="40">&nbsp;</td>
-												<td colspan="2" class="title"><span class="message">{MESSAGE}</span></td>
-											</tr>
+												<div align="left" class="title"><span class="message">{MESSAGE}</span></div>
 											<!-- EDP: page_message -->
-											<tr>
-												<td>&nbsp;</td>
-												<td colspan="2" class="content3"><strong>{TR_UPLOAD_LOGO}</strong></td>
-											</tr>
-											<tr>
-												<td width="40" nowrap="nowrap">&nbsp;</td>
-												<td width="200" class="content2" nowrap="nowrap">{TR_LOGO_FILE}</td>
-												<td class="content" nowrap="nowrap"><input type="file" name="logo_file" size="40" /></td>
-											</tr>
-											<tr>
-												<td nowrap="nowrap">&nbsp;</td>
-												<td nowrap="nowrap">
-													<input name="upload_logo" type="submit" class="button" value=" {TR_UPLOAD} " />
-												</td>
-												<td nowrap="nowrap">
-													<input name="delete_logo" type="submit" class="button" value=" {TR_REMOVE} " />
-												</td>
-											</tr>
-											<tr>
-												<td nowrap="nowrap">&nbsp;</td>
-												<td colspan="2" nowrap="nowrap">&nbsp;</td>
-											</tr>
-											<tr>
-												<td nowrap="nowrap">&nbsp;</td>
-												<td colspan="2" nowrap="nowrap"><img src="{OWN_LOGO}" alt="reseller logo" /></td>
-											</tr>
-										</table>
-										<!-- end of content -->
-									</td>
-									<td>&nbsp;</td>
-								</tr>
-								<tr>
-									<td>&nbsp;</td>
-									<td>&nbsp;</td>
-								</tr>
-							</table>
-						</form>
+												<table width="100%" cellpadding="5" cellspacing="5">
+													<tr>
+														<td colspan="2" class="content3"><b>{TR_UPLOAD_LOGO}</b></td>
+													</tr>
+													<tr>
+														<td width="230" class="content2" nowrap="nowrap">{TR_LOGO_FILE}</td>
+														<td class="content" nowrap="nowrap">
+															<form enctype="multipart/form-data" name="set_layout" method="post" action="settings_layout.php">
+																<input type="file" name="logo_file" size="40" />
+																<input type="hidden" name="uaction" value="upload_logo" />
+																<input name="Submit" type="submit" class="button" value=" {TR_UPLOAD} " />
+															</form>
+														</td>
+													</tr>
+													<tr>
+														<td nowrap="nowrap">&nbsp;</td>
+														<td nowrap="nowrap">&nbsp;</td>
+													</tr>
+													<!-- BDP: logo_remove_button -->
+													<tr>
+														<td class="content2"><img src="{OWN_LOGO}" alt="reseller logo" /></td>
+														<td class="content">
+															<form method="post" action="settings_layout.php">
+																<input type="hidden" name="uaction" value="delete_logo" />
+																<input name="Submit" type="submit" class="button" value=" {TR_REMOVE} " />
+															</form>
+														</td>
+													</tr>
+													<!-- EDP: logo_remove_button -->
+												</table>
+												<!-- end of content -->
+											</td>
+										</tr>
+									</table>
+								</td>
+								<td>&nbsp;</td>
+							</tr>
+							<tr>
+								<td>&nbsp;</td>
+								<td>&nbsp;</td>
+							</tr>
+						</table>
 					</td>
 				</tr>
 			</table>
